Fixed up sidebar widget spacings and nav colors

--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -4,6 +4,18 @@ $body-font-color: #4C5051;
 $body-font-color-secondary: #fff;
 $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
 $anchor-font-secondary-color-hover: scale-color($secondary-color, $lightness: -14%);
+
+@media only screen and (min-width: 40.063em) {
+	div.title-area  {
+		background: #fff;
+	}
+}
+
+@media only screen and (max-width: 40.063em) {
+	div.title-area  {
+		background-color: #fff;
+	}
+}
 /*** DARK TEXT ***/
 @media only screen and (min-width: 40.063em) {
 	header.site-header .site-title a {
