--- a/scss/partials/_widgets.scss
+++ b/scss/partials/_widgets.scss
@@ -836,25 +836,50 @@ div[class*='home-middle-'].bg-gradient, footer.site-footer .footer-widgets {
 		.impress-carousel {
 			background: #fff;
 			.carousel-photo {
-				min-height: 275.25px;
+				height: 235px;
 			}
 			a {
 				color: #000;
 				font-size: 1rem;
 			}
+			.property-details {
+				font-size: rem-calc(18);
+				.address, .city-state {
+					font-weight: bold;
+				}
+			}
+			h3.price {
+				font-size: rem-calc(28);
+			}
+			.carousel-photo{
+				height: 235px;
+				margin-bottom: 10px;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+			.owl-controls span {
+				font-size: rem-calc(20);
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: -35px;
+				display: block;
+			}
+			.owl-nav.owl-controls button {
+				margin-top: 20px;
+			}
+			.owl-nav.owl-controls button.owl-prev {
+				float: left;
+				margin-left: 30px;
+			}
+			.owl-nav.owl-controls button.owl-next {
+				float: right;
+				margin-right: 30px;
+			}
 		}
-	}
-}
-
-.impress-carousel-widget {
-	.property-details {
-		font-size: rem-calc(18);
-		.address, .city-state {
-			font-weight: bold;
-		}
-	}
-	h3.price {
-		font-size: rem-calc(28);
 	}
 }
 
@@ -873,8 +898,16 @@ div.impress-carousel .owl-nav.owl-controls button.owl-next {
 	color: $primary-color;
 	height: 65px;
 	width: 65px;
-	margin: 40px 24px;
 	border: 2px solid;
+}
+div.impress-carousel .owl-nav.owl-controls button.owl-prev {
+	margin: 40px 24px;
+	margin-left: 0;
+
+}
+div.impress-carousel .owl-nav.owl-controls button.owl-next {
+	margin: 40px 24px;
+	margin-right: 0;
 }
 
 // Make the chevrons look centered
